// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPickerInput allowRemove 1`] = `
<div
  className="color-picker"
>
  <button
    className="color-picker__button btn btn-default"
    onClick={[Function]}
    type="button"
  >
    <i
      className="color-picker__chip-small"
      style={
        Object {
          "backgroundColor": "#000000",
          "border": undefined,
        }
      }
    />
    <i
      className="fa fa-caret-down"
    />
  </button>
  <div
    className="color-picker__remove"
  >
    <span
      className="container--action-button"
      onClick={[Function]}
    >
      <i
        className="fa fa-times container--removal-icon"
      />
      
    </span>
  </div>
  <div
    className="color-picker__picker"
  />
</div>
`;

exports[`ColorPickerInput default props 1`] = `
<div
  className="color-picker"
>
  <button
    className="color-picker__button btn btn-default"
    onClick={[Function]}
    type="button"
  >
    <i
      className="color-picker__chip-small"
      style={
        Object {
          "backgroundColor": "#000000",
          "border": undefined,
        }
      }
    />
    <i
      className="fa fa-caret-down"
    />
  </button>
  <div
    className="color-picker__picker"
  />
</div>
`;

exports[`ColorPickerInput showPicker 1`] = `
<div
  className="color-picker"
>
  <button
    className="color-picker__button btn btn-default"
    onClick={[Function]}
    type="button"
  >
    <ColorIcon
      asSquare={true}
      cls="color-picker__chip-small"
      value="#000000"
    />
    <i
      className="fa fa-caret-up"
    />
  </button>
  <div
    className="color-picker__picker"
  >
    <div
      className="color-picker__mask"
      onClick={[Function]}
    />
    <ColorPicker
      color="#000000"
      colors={
        Array [
          "#4D4D4D",
          "#999999",
          "#FFFFFF",
          "#F44E3B",
          "#FE9200",
          "#FCDC00",
          "#DBDF00",
          "#A4DD00",
          "#68CCCA",
          "#73D8FF",
          "#AEA1FF",
          "#FDA1FF",
          "#333333",
          "#808080",
          "#cccccc",
          "#D33115",
          "#E27300",
          "#FCC400",
          "#B0BC00",
          "#68BC00",
          "#16A5A5",
          "#009CE0",
          "#7B64FF",
          "#FA28FF",
          "#000000",
          "#666666",
          "#B3B3B3",
          "#9F0500",
          "#C45100",
          "#FB9E00",
          "#808900",
          "#194D33",
          "#0C797D",
          "#0062B1",
          "#653294",
          "#AB149E",
        ]
      }
      onChangeComplete={[Function]}
      styles={Object {}}
    />
  </div>
</div>
`;

exports[`ColorPickerInput with button text 1`] = `
<div
  className="color-picker"
>
  <button
    className="color-picker__button btn btn-default"
    onClick={[Function]}
    type="button"
  >
    Select color...
    <i
      className="fa fa-caret-down"
    />
  </button>
  <i
    className="color-picker__chip"
    style={
      Object {
        "backgroundColor": "#000000",
        "border": undefined,
      }
    }
  />
  <div
    className="color-picker__picker"
  />
</div>
`;

exports[`ColorPickerInput without value 1`] = `
<div
  className="color-picker"
>
  <button
    className="color-picker__button btn btn-default"
    onClick={[Function]}
    type="button"
  >
    None
    <i
      className="fa fa-caret-down"
    />
  </button>
  <div
    className="color-picker__picker"
  />
</div>
`;
